<resources>
    <string name="app_name" translatable="false">Earthquake Monitor</string>

    <!--  Titles  -->
    <string name="title_save_earthquake">Save current earthquake</string>
    <string name="title_latest_earthquakes">Latest earthquakes:</string>
    <string name="title_preference_dark_mode">Enable dark mode</string>
    <string name="title_recent_earthquakes">Recent earthquakes</string>
    <string name="title_earthquake_detail">Earthquake details</string>
    <string name="title_saved_earthquakes">Saved Earthquakes</string>
    <string name="title_general_map">Earthquake Map</string>
    <string name="title_menu_settings">Settings</string>
    <string name="title_category_theme">Theme</string>

    <!--  Helpers  -->
    <string name="marker_epicenter">Epicenter</string>
    <string name="content_go_to_epicenter">Go to epicenter</string>
    <string name="depth">%.2f km</string>
    <string name="default_earthquakes">0 \nearthquakes</string>
    <string name="snack_bar_earthquake_saved">Earthquake saved</string>
    <string name="dialog_delete_earthquake">Are you sure you want to delete this item?</string>
    <string name="dialog_save_earthquake">Are you sure you want to save this item?</string>
    <string name="helper_no_earthquakes_saved">No saved earthquakes</string>

    <!--  Template Strings  -->
    <string name="template_magnitude">Magnitude %.2f</string>
    <string name="template_depth">Depth %.2f km</string>
    <string name="template_location">Location %1.2f, %2.2f</string>
    <string name="template_earthquakes">%d \nearthquakes</string>

    <!--  Buttons  -->
    <string name="button_go_to_map">Go to map</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_go">Go</string>
</resources>