<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/viewPagerFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.axellsolis.earthquakemonitor.ui.LatestEarthquakesFragment"
        android:label="@string/title_recent_earthquakes"
        tools:layout="@layout/fragment_latest_earthquakes" />
    <fragment
        android:id="@+id/earthquakeDetailFragment"
        android:name="com.axellsolis.earthquakemonitor.ui.EarthquakeDetailFragment"
        android:label="@string/title_earthquake_detail"
        tools:layout="@layout/fragment_earthquake_detail">
    </fragment>
    <fragment
        android:id="@+id/earthquakeMapFragment"
        android:name="com.axellsolis.earthquakemonitor.ui.GeneralMapFragment"
        android:label="@string/title_general_map"
        tools:layout="@layout/fragment_earthquake_map" />
    <fragment
        android:id="@+id/savedEarthquakesFragment"
        android:name="com.axellsolis.earthquakemonitor.ui.SavedEarthquakesFragment"
        android:label="@string/title_saved_earthquakes"
        tools:layout="@layout/fragment_saved_earthquakes" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.axellsolis.earthquakemonitor.ui.SettingsFragment"
        android:label="SettingsFragment" />
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.axellsolis.earthquakemonitor.ui.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_viewPagerFragment_to_savedEarthquakesFragment"
            app:destination="@id/savedEarthquakesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_viewPagerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_viewPagerFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_viewPagerFragment_to_earthquakeMapFragment"
            app:destination="@id/earthquakeMapFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_viewPagerFragment_to_earthquakeDetailFragment"
            app:destination="@id/earthquakeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>