<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvEarthquakesInfo"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_margin="@dimen/common_padding_min"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/common_radius"
        app:cardElevation="@dimen/common_radius"
        app:layout_constraintBottom_toTopOf="@id/listLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_default">

            <LinearLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/tvGoToMap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvLatestEarthquakes"
                    style="@style/Widget.EarthquakeMonitor.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_latest_earthquakes"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCount"
                    style="@style/Widget.EarthquakeMonitor.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/default_earthquakes"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="45sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvGoToMap"
                style="@style/Widget.EarthquakeMonitor.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:minHeight="48dp"
                android:padding="@dimen/common_padding_min"
                android:text="@string/button_go_to_map"
                android:textColor="?attr/colorPrimary"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:drawableStartCompat="@drawable/ic_map"
                app:drawableTint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/listLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvEarthquakesInfo">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/common_padding_min"
            tools:listitem="@layout/item_earthquake" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
